Fix wrong git commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Change release branch
         run: |
-          git fetch
-          git branch -t origin/release
+          git branch release origin/release
+          git fetch origin release:release
           git merge --ff-only release
           git checkout release
 
