--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Change release branch
         run: |
+          git fetch
           git branch release origin/release
           git fetch origin release:release
           git merge --ff-only release
