--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,6 @@ jobs:
           git config --global user.email "yumis-developer@users.noreply.github.com"
           git add .
           yarn version --new-version "${{ github.event.inputs.version }}"
-          git pull -u --rebase origin release
+          git pull --rebase origin release
           git push origin release
           git push --tags
