--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Change release branch
-        run: |
-          git checkout -B release
-
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
@@ -44,6 +40,4 @@ jobs:
           git config --global user.email "yumis-developer@users.noreply.github.com"
           git add .
           yarn version --new-version "${{ github.event.inputs.version }}"
-          git pull --rebase origin release
-          git push origin release
-          git push --tags
+          git push --follow-tags
