--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,6 @@ jobs:
         run: |
           git config --global user.name "Yumis Developer"
           git config --global user.email "yumis-developer@users.noreply.github.com"
-          git add .
+          git add --force dist
           yarn version --new-version "${{ github.event.inputs.version }}"
           git push --follow-tags
