--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@vercel/ncc": "^0.33.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
   }
 }
