--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,6 @@ jobs:
           git config --global user.email "yumis-developer@users.noreply.github.com"
           git add --force dist
           yarn version --new-version "${{ github.event.inputs.version }}"
-          git branch v1 origin/v1
-          git merge v1
+          git checkout -B v1 origin/v1
+          git merge master
           git push --all
