--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,5 +42,6 @@ jobs:
           git add --force dist
           yarn version --new-version "${{ github.event.inputs.version }}"
           git checkout -B v1 origin/v1
+          git pull origin v1
           git merge master
           git push --all
