--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "homepage": "https://github.com/yumis-coconudge/clean-workspace-action#readme",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "glob": "^7.2.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/node": "^16.11.12",
     "@vercel/ncc": "^0.33.0",
     "ts-node": "^10.4.0",
