--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Push
         run: |
-          git config --global user.name "Yumis Developer"
-          git config --global user.email "yumis-developer@users.noreply.github.com"
+          git config --global user.name "Wavle Developer"
+          git config --global user.email "wavle-developer@users.noreply.github.com"
           git add --force dist
           yarn version --new-version "${{ github.event.inputs.version }}"
           git checkout -b master origin/master
